--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -4,11 +4,9 @@
 
 <div>
   <form method="POST">
-    <input name="first">
-    <input name="last">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <canvas id="canvas" width="200" height="100"><input type="hidden" name="sig" id="sig"></canvas>
-    <input type="submit" id="button" placeholder="submit">
+    <button id="sig-button">support</button>
   </form>
 </div>
 {{#if err}}
