--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <title>Petition</title>
   </head>
@@ -12,7 +12,7 @@
       {{{body}}}  
     </div>  
  
-   <script src="script.js"></script>
+   <script src="/script.js"></script>
   </body>
 <footer id="footer">webbabies gmbh</footer>
 </html>
