--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 * {
   background-color: aquamarine;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 #canvas {
   background-color: chartreuse;
