--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,6 +1,5 @@
 
-  <h1>petition</h1>
-  <h3>your signature helps - build a better tomorrow</h3>
+  <h3>your signature helps</h3>
 
 <div>
   <form method="POST">
