--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,6 @@
-<h1>profile test page</h1>
-<h2>info on you</h2>
+
+
+<h2>please fill out some info on you</h2>
 <div>
   <form method="POST">
     <input name="age" placeholder="age">
@@ -9,9 +10,11 @@
     <button id="userdata-button">submit info</button>
   </form>
 </div>
-
+<button id="edit">edit profile</button>
 {{#rows}}
 {{/rows}}
+
+<h2>or continue to <a href="petition">petition</a></h2>
 
 {{#if err}}
 <div>
