--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,11 @@
-<h1>world without you is possible</h1>
-<h2>please register here</h2>
+<h1>support the technological advancement of wild pigs</h1>
+<div>
+<p>on summer 2020 the world witnessed an evolutionary breaktrough</p>
+<p>a wild pig family tried to obtain laptop for the first time, understanding the importance of informatical literacy in the digital age</p>
+<p>however, non-understanding humans <a href="https://www.tagesspiegel.de/berlin/verfolgungsjagd-in-berlin-grunewald-nackter-mann-jagt-wildschwein-am-teufelssee/26076638.html"> described</a> them as stealing, garbage-scavenging wild animals, ignorant of technological advances and other people's property</p>
+<p>this petition aims to support wild pigs in their struggle for technological advancement</p>
+<h3>laptop for every wild pig</h3>
+</div>
 <div>
   <form method="POST">
     <input name="first" placeholder="first name">
@@ -10,6 +16,9 @@
     <button id="reg-button">join</button>
   </form>
 </div>
+<div>if you already have a profile, click <a href="login">here </a>to log in</div>
+<img src="bg-img.jpg"/>
+
 {{#if err}}
 <div>
   <h3 id="error-log">there was an error</h3>
